# Foam-Structure-Generator

./: README.md
povray-3.7-stable/: Makefile  Makefile.am  Makefile.in  bootstrap  config.h  config.h.in  config.status  configure  kde_install.sh  povray.ini  povray.ini.in
povray-3.7-stable/source/: Makefile  Makefile.am  Makefile.in  jversion.h
povray-3.7-stable/source/.deps/: lightgrp.Po  optout.Po  pov_mem.Po
povray-3.7-stable/source/backend/.deps/: povray.Po  precomp.Po
povray-3.7-stable/source/backend/bounding/.deps/: bbox.Po  bcyl.Po  boundingtask.Po  bsphere.Po
povray-3.7-stable/source/backend/colour/.deps/: colour.Po  colutils.Po  spectral.Po
povray-3.7-stable/source/backend/control/.deps/: benchmark.Po  messagefactory.Po  renderbackend.Po
povray-3.7-stable/source/backend/interior/.deps/: interior.Po  media.Po
povray-3.7-stable/source/backend/lighting/.deps/: photonestimationtask.Po  photons.Po  photonshootingstrategy.Po  photonshootingtask.Po  photonsortingtask.Po  photonstrategytask.Po  point.Po  rad_data.Po  radiosity.Po  subsurface.Po
povray-3.7-stable/source/backend/math/.deps/: chi2.Po  hcmplx.Po  mathutil.Po  matrices.Po  polysolv.Po  quatern.Po  splines.Po
povray-3.7-stable/source/backend/parser/.deps/: express.Po  fnsyntax.Po  function.Po  parse.Po  parsestr.Po  parstxtr.Po  reswords.Po  tokenize.Po
povray-3.7-stable/source/backend/pattern/.deps/: pattern.Po  warps.Po
povray-3.7-stable/source/backend/render/.deps/: radiositytask.Po  ray.Po  rendertask.Po  trace.Po  tracepixel.Po  tracetask.Po
povray-3.7-stable/source/backend/scene/.deps/: atmosph.Po  camera.Po  objects.Po  scene.Po  threaddata.Po  view.Po
povray-3.7-stable/source/backend/shape/.deps/: bezier.Po  blob.Po  boxes.Po  cones.Po  csg.Po  discs.Po  fpmetric.Po  fractal.Po  hfield.Po  isosurf.Po  lathe.Po  mesh.Po  ovus.Po  planes.Po  poly.Po  polygon.Po  prism.Po  quadrics.Po  sor.Po  spheres.Po  sphsweep.Po  super.Po  torus.Po  triangle.Po  truetype.Po
povray-3.7-stable/source/backend/support/.deps/: bsptree.Po  fileutil.Po  imageutil.Po  jitter.Po  msgutil.Po  octree.Po  randomsequences.Po  statistics.Po  task.Po  taskqueue.Po
povray-3.7-stable/source/backend/texture/.deps/: normal.Po  pigment.Po  texture.Po
povray-3.7-stable/source/backend/vm/.deps/: fncode.Po  fnintern.Po  fnpovfpu.Po
povray-3.7-stable/source/base/.deps/: fileinputoutput.Po  path.Po  pov_err.Po  povms.Po  povmscpp.Po  precomp.Po  processoptions.Po  stringutilities.Po  textstream.Po  textstreambuffer.Po  timer.Po
povray-3.7-stable/source/base/animation/.deps/: animation.Po  moov.Po
povray-3.7-stable/source/base/font/.deps/: crystal.Po  cyrvetic.Po  povlogo.Po  timrom.Po
povray-3.7-stable/source/base/image/.deps/: bmp.Po  colourspace.Po  encoding.Po  gif.Po  gifdecod.Po  hdr.Po  iff.Po  image.Po  jpeg.Po  openexr.Po  pgm.Po  png.Po  ppm.Po  targa.Po  tiff.Po
povray-3.7-stable/source/frontend/.deps/: animationprocessing.Po  console.Po  defaultplatformbase.Po  display.Po  filemessagehandler.Po  imagemessagehandler.Po  imageprocessing.Po  parsermessagehandler.Po  precomp.Po  processrenderoptions.Po  renderfrontend.Po  rendermessagehandler.Po  shelloutprocessing.Po
povray-3.7-stable/unix/: Makefile  Makefile.am  Makefile.in  povray
povray-3.7-stable/unix/.deps/: disp_sdl.Po  disp_text.Po
povray-3.7-stable/vfe/: Makefile  Makefile.am  Makefile.in
povray-3.7-stable/vfe/.deps/: vfe.Po  vfecontrol.Po  vfedisplay.Po  vfepovms.Po  vfeprecomp.Po  vfesession.Po
povray-3.7-stable/vfe/unix/.deps/: platformbase.Po  unixconsole.Po  unixoptions.Po  vfeplatform.Po
voro++-0.4.6/: config.mk
voro++-0.4.6/examples/basic/: .import.cc.swp  .parse.py.swo  .parse.py.swp  Makefile  Nofront.py  README  Sphere.py  foam.pov  import  import.cc  import.pov  in.box
voro++-0.4.6/examples/custom/: cell_statistics  custom_output  radical
voro++-0.4.6/examples/degenerate/: degenerate  degenerate2
voro++-0.4.6/examples/extra/: box_cut  cut_region  irregular  superellipsoid
voro++-0.4.6/examples/interface/: find_voro_cell  loops  odd_even  polygons
voro++-0.4.6/examples/walls/: Clipped.z.1.csv  Clipped.z.1200.csv  Coord1.csv  Coord1200.csv  Cut1200.csv  Makefile  Newbottom.py  Packed.py  circle.cc  comain.csv  coord  coord.cc  coord.pov  coord_p.pov  coord_v.gnu  coord_v.pov  cylinder  cylinder.cc  cylinder.pov  cylinder_p.pov  cylinder_v.gnu  cylinder_v.pov  domain.pov  frustum  pack_coord1  tetrahedron  torus
voro++-0.4.6/src/: .cell.cc.swp  .wall.hh.swp  voro++
